image link fixed

--- a/portfolio-item_Elearn.html
+++ b/portfolio-item_Elearn.html
@@ -81,7 +81,7 @@
                 <ol class="breadcrumb">
                     <li><a href="portfolio-1-col.html">Portfolio</a>
                     </li>
-                    <li class="active">Project 3  </li>
+                    <li class="active">Project 3</li>
                 </ol>
             </div>
         </div>
@@ -102,13 +102,13 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img class="img-responsive" src="images/elearn/elearn1.jpg" alt="">
+                            <img class="img-responsive" src="images/elearn/elearn1.JPG" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="images/elearn/elearn2.jpg" alt="">
+                            <img class="img-responsive" src="images/elearn/elearn2.JPG" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="images/elearn/elearn3.jpg" alt="">
+                            <img class="img-responsive" src="images/elearn/elearn3.JPG" alt="">
                         </div>
                     </div>
 
